# multi-agent-workflows

./: .gitignore  CHANGELOG.md  SKILL.md  VERIFICATION.md  install.sh  pyproject.toml
.github/workflows/: test.yml
bench/: RESULTS.md  __init__.py  baseline.json  conftest.py  test_aggregation.py  test_circuit_breaker.py  test_log.py  test_misc.py  test_streaming_aggregation.py
evals/: evals.json
examples/: README.md  multi-backend.sh  parallel-code-review.sh  phased-refactor.sh  test-sharding.sh
examples/manifests/: refactor-example.yaml
references/: aggregation-patterns.md  ci-backend.md  context-propagation.md  docker-backend.md  kubernetes-backend.md  remote-backend.md  result-schema.json  result-schema.md
scripts/: __init__.py  _common.py  _log.py  aggregate_results.py  credential_helper.py  dependency_graph.py  run_evals.py  schema_validator.py  spawn_docker.py  spawn_k8s.py  spawn_oz.py  wait_for_phase.py
tests/: conftest.py  test_aggregate_results.py  test_common.py  test_credential_helper.py  test_dependency_graph.py  test_log.py  test_oz_metrics.py  test_run_evals.py  test_schema_validator.py  test_spawn_docker.py  test_spawn_k8s.py  test_spawn_oz.py  test_wait_for_phase.py
